Refactor code structure for improved readability and maintainability

--- a/fruittypes.html
+++ b/fruittypes.html
@@ -409,8 +409,9 @@
             </button>
         </div>
         
-        <div class="navigation-links">
-            <a href="pets.html">🐾 Pets</a>
+                <div class="navigation-links">
+            <a href="pets.html">🐾 Pet Calculator</a>
+            <a href="pettracker.html">📋 Pet Tracker</a>
             <a href="recipes.html">🍳 Recipes</a>
         </div>
         
