--- a/petlimits.html
+++ b/petlimits.html
@@ -566,12 +566,15 @@
             'bloodMoonShop.js',
             'bugEgg.js',
             'chestsEventsOther.js',
+            'chubbyChipmunk.js',
             'commonEgg.js',
             'commonSummerEgg.js',
             'dinosaurEgg.js',
             'enchantedEgg.js',
             'fallEgg.js',
+            'fallPetShop.js',
             'gourmetEgg.js',
+            'jungleEgg.js',
             'legendaryEgg.js',
             'mythicalEgg.js',
             'nightEgg.js',
@@ -581,6 +584,8 @@
             'rainbowExotic.js',
             'rareEgg.js',
             'rareSummerEgg.js',
+            'seasonPass.js',
+            'spookyEgg.js',
             'sproutEgg.js',
             'uncommonEgg.js',
             'zenEgg.js'
