--- a/recipes.html
+++ b/recipes.html
@@ -370,8 +370,9 @@
             </button>
         </div>
         
-        <div class="navigation-links">
-            <a href="pets.html">🐾 Pets</a>
+                <div class="navigation-links">
+            <a href="pets.html">🐾 Pet Calculator</a>
+            <a href="pettracker.html">📋 Pet Tracker</a>
             <a href="fruittypes.html">🍎 Fruit Types</a>
         </div>
         
