Add Safari Pets module with detailed abilities and calculations
- Introduced a new module for Safari Pets including Armadillo, Stag Beetle, Mantis Shrimp, Hydra, Oxpecker, Zebra, Giraffe, Rhino, Elephant, and their enhanced versions.
- Each pet has unique abilities, cooldowns, and modifiers based on weight.
- Implemented calculation methods for each pet to determine cooldowns and effects based on weight and modifiers.
- Added descriptions and images for each pet to enhance user experience.

--- a/petlimits.html
+++ b/petlimits.html
@@ -574,6 +574,7 @@
             'fallEgg.js',
             'fallPetShop.js',
             'gourmetEgg.js',
+            'halloween.js',
             'jungleEgg.js',
             'legendaryEgg.js',
             'mythicalEgg.js',
@@ -584,6 +585,7 @@
             'rainbowExotic.js',
             'rareEgg.js',
             'rareSummerEgg.js',
+            'safari.js',
             'seasonPass.js',
             'spookyEgg.js',
             'sproutEgg.js',
