Add Safari Egg and related pets to petcard and pets modules

--- a/petcard.html
+++ b/petcard.html
@@ -1307,6 +1307,9 @@
             'Sprout Egg': 'https://static.wikia.nocookie.net/growagarden/images/9/96/SproutEgg.png',
             'Uncommon Egg': 'https://static.wikia.nocookie.net/growagarden/images/0/0c/Uncommon_Egg.webp',
             'Zen Egg': 'https://static.wikia.nocookie.net/growagarden/images/1/14/Zeneg.png',
+            'Safari Egg': 'https://static.wikia.nocookie.net/growagarden/images/6/65/SafariEgg.png',
+            'Exotic Safari Egg': 'https://static.wikia.nocookie.net/growagarden/images/6/65/SafariEgg.png',
+            'Safari Shop': 'https://static.wikia.nocookie.net/growagarden/images/c/cb/Safari_Shop.png',
             'other': 'https://static.wikia.nocookie.net/growagarden/images/9/90/KitsuneChest.png'
         };
 
