--- a/pets.html
+++ b/pets.html
@@ -428,6 +428,9 @@
             'Uncommon Egg': 'https://static.wikia.nocookie.net/growagarden/images/0/0c/Uncommon_Egg.webp',
             'Zen Egg': 'https://static.wikia.nocookie.net/growagarden/images/1/14/Zeneg.png',
             'Fall Pet Shop': 'https://static.wikia.nocookie.net/growagarden/images/f/f0/FallEventIsland.png',
+            'Safari Egg': 'https://static.wikia.nocookie.net/growagarden/images/6/65/SafariEgg.png',
+            'Exotic Safari Egg': 'https://static.wikia.nocookie.net/growagarden/images/6/65/SafariEgg.png',
+            'Safari Shop': 'https://static.wikia.nocookie.net/growagarden/images/c/cb/Safari_Shop.png',
             'Season Pass': 'https://static.wikia.nocookie.net/growagarden/images/1/11/Season_Pass_Icon.png',
             'Chubby Chipmunk Event': 'https://static.wikia.nocookie.net/growagarden/images/5/52/ChubbyChipmunkPet.png',
             'Grave Digging': 'https://static.wikia.nocookie.net/growagarden/images/8/85/Gravestone.png',
@@ -1448,6 +1451,7 @@
                     'Fall Pet Shop',
                     'Season Pass',
                     'Safari Egg',
+                    'Safari Shop',
                     'Exotic Safari Egg',
                     'Chubby Chipmunk Event',
                     'Grave Digging',
