Refactor pet attributes and abilities across multiple files
- Updated navigation links in pets.html to use absolute paths and added a new link for Pet Limits.
- Increased the age slider range from 100 to 125 in pets.html.
- Adjusted weight constants in pets.html for better maintainability.
- Enhanced the BUG_EGG_PETS description and calculation logic in bugEgg.js to include dual abilities and updated perKgImpact.
- Modified hatch speed calculations and perKgImpact in chestsEventsOther.js to include maximum limits.
- Updated action time and hatch time reduction logic in chestsEventsOther.js with new maximums.
- Improved the dinosaurEgg.js calculations for duplication chances with maximum limits.
- Enhanced mythicalEgg.js to include dual abilities in descriptions and calculations.
- Updated nightEgg.js to include maximum limits for range and bonus calculations.
- Adjusted paradiseEgg.js to include maximum limits for cooldown advance and buff range.
- Enhanced primalEgg.js to include maximum limits for crafted item duplication chance.
- Updated rainbowExotic.js to include maximum limits for cooldown and affected fruits.
- Enhanced rareSummerEgg.js to include maximum limits for range, size bonus, and variant bonus.
- Updated safari.js to adjust age requirements and cooldown impacts.
- Enhanced uncommonEgg.js to include maximum limits for egg hatch speed.
- Updated zenEgg.js to include maximum limits for range and bloodlit replacement chance.
- Adjusted pettracker.html to reflect new weight and age limits in input fields and validation.

--- a/pets.html
+++ b/pets.html
@@ -29,9 +29,10 @@
         </div>
         
         <div class="navigation-links">
-            <a href="pettracker.html">📋 Pet Tracker</a>
-            <a href="fruittypes.html">🍎 Fruit Types</a>
-            <a href="recipes.html">🍳 Recipes</a>
+            <a href="/pettracker">📋 Pet Tracker</a>
+            <a href="/fruittypes">🍎 Fruit Types</a>
+            <a href="/recipes">🍳 Recipes</a>
+            <a href="/petlimits">📊 Pet Limits</a>
         </div>
         
         <div class="calculator">
@@ -180,8 +181,8 @@
                         </div>
                     </div>
                     <div style="margin-top: 15px;">
-                        <label for="ageSlider">Age Slider (1-100):</label>
-                        <input type="range" id="ageSlider" min="1" max="100" value="50" style="width: 100%;">
+                        <label for="ageSlider">Age Slider (1-125):</label>
+                        <input type="range" id="ageSlider" min="1" max="125" value="50" style="width: 100%;">
                         <span id="ageSliderValue" style="font-weight: bold; margin-left: 10px;">50</span>
                     </div>
                 </div>
@@ -529,8 +530,8 @@
 
         // Constants for better maintainability
         const CONSTANTS = {
-            MIN_WEIGHT: 0,
-            MAX_WEIGHT: 1000,
+            MIN_WEIGHT: 0.88,
+            MAX_WEIGHT: 140.40,
             WEIGHT_STEP: 0.01,
             DEBOUNCE_DELAY: 300
         };
